Item content directives.

--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
@@ -3,7 +3,8 @@
   <div ng-transclude></div>
 
   <ul class="list-unstyled">
-    <li ng-show="tasksListFilter" ng-repeat="task in tasks | filter:newItem">
+
+    <li ng-class="selected" ng-show="tasksListFilter" ng-repeat="task in tasks | filter:newItem">
 
       <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="task-checkbox" ng-checked="task.completed" ng-click="taskChecked($index)">
 
@@ -12,6 +13,7 @@
       <div task-content ng-show="showTaskContent"></div>
 
     </li>
+
   </ul>
 
 </div>
