Item content directives.

--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
@@ -3,14 +3,19 @@
     <span><small>{{value}}</small></span>
 
   </li>
+
   <li ng-repeat="tag in task.relationships.tags | tagTitle">
 
     <span ng-click="setActiveItem(tag)"><small><a class="text-muted" href="my/tasks/context/{{tag.uuid}}">@{{tag.title}}</a></small></span>
 
   </li>
 
-  <li>
-    <small><a class="text-muted" href="my/tasks/project/{{task.uuid}}" ng-click="setActiveItem(task)">add subtask</a></small>
-  </li>
+  <div class="item-actions">
+    
+    <button type="button" class="btn btn-default" ng-click="editTask(task)">
+      edit
+    </button>
+
+  </div>
 
 </ul>
