--- a/frontend/core/src/main/webapp/static/partials/my/tasks/new.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/new.html
@@ -1,6 +1,6 @@
 <div class="em-slide">
 
-  <button type="button" class="btn btn-default pull-right" ng-click="cancelNew()">
+  <button type="button" class="btn btn-default pull-right" ng-click="cancelEdit()">
     -
   </button>
 
