--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
@@ -32,7 +32,7 @@
 
   <div class="form-group">
     <div class="col-lg-10">
-      <button type="submit" class="btn btn-default" ng-disabled="!addTask.$valid" ng-click="addNewTask()">
+      <button type="submit" class="btn btn-default" ng-disabled="!addTask.$valid" ng-click="editTask()">
         add
       </button>
     </div>
