--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
@@ -8,7 +8,7 @@
 
       <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="task-checkbox" ng-checked="task.completed" ng-click="taskChecked($index)">
 
-      <span ng-click="expandTask()">{{task.title}}</span>
+      <span ng-click="toggleTaskContent()">{{task.title}}</span>
 
       <div task-content ng-show="showTaskContent"></div>
 
