Item content directives.

--- a/frontend/core/src/main/webapp/static/partials/templates/notes/noteContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/notes/noteContent.html
@@ -10,4 +10,12 @@
 
   </li>
 
+  <div class="item-actions">
+    
+    <button type="button" class="btn btn-default" ng-click="noteEdit(note)">
+      edit
+    </button>
+
+  </div>
+
 </ul>
