--- a/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
@@ -6,14 +6,22 @@
 
   <h1 class="text-primary">{{note.title}}</h1>
 
-  <form class="boxsizingBorder" role="form">
+  <form class="boxsizingBorder" role="form" name="noteEdit">
 
     <div class="boxsizingBorder form-group">
       <label class="boxsizingBorder sr-only" for="noteDescription" class="col-lg-2 control-label">description</label>
       <div class="boxsizingBorder col-lg-10">
-        <textarea class="form-control boxsizingBorder" id="noteDescription"  placeholder="description..." autofocus ng-model="note.content"></textarea>
+        <textarea class="form-control boxsizingBorder" id="noteDescription" placeholder="description..." autofocus ng-model="note.content"></textarea>
       </div>
     </div>
   </form>
+
+  <div class="form-group">
+    <div class="col-lg-10">
+      <button type="submit" class="btn btn-default" ng-disabled="!noteEdit.$valid" ng-click="editNote()">
+        add
+      </button>
+    </div>
+  </div>
 
 </div>
