--- a/frontend/core/src/main/webapp/static/partials/my/notes/new.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes/new.html
@@ -1,11 +1,11 @@
 <div class="em-slide">
 
-  <button type="button" class="btn btn-default pull-right" ng-click="cancelNew()">
+  <button type="button" class="btn btn-default pull-right" ng-click="cancelEdit()">
     -
   </button>
 
   <h1 class="text-primary"><a href="/my/notes">notes</a></h1>
 
-  <div new-note></div>
+  <div edit-note></div>
 
 </div>
