Added task content directive into contexts and projects.

--- a/frontend/core/src/main/webapp/static/partials/my/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/context.html
@@ -6,18 +6,8 @@
 
   <h1 class="text-primary"><a href="my/tasks">tasks</a></h1>
 
-  <h2>@{{context.title}}</h2>
-
-  <ul class="entry-list">
-
-    <li ng-repeat="task in subtasks">
-
-      <input type="checkbox" name="checkbox" id="checkbox{{$index}}" ng-model="task.done" ng-change="taskChecked($index)">
-      <label for="checkbox{{$index}}" class="done-{{task.done}}" eat-click ng-click="expandTask()">{{task.title}}</label>
-
-      <div task-content ng-show="showMe" ></div>
-    </li>
-
-  </ul>
+  <div tasks-list tasksfilter="true">
+    <h2>@{{context.title}}</h2>
+  </div>
 
 </div>
