--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
@@ -3,14 +3,14 @@
   <div class="form-group">
     <label class="sr-only" for="newTaskTitle">title</label>
     <div class="col-lg-10">
-      <input type="text" class="form-control" id="newTaskTitle" ng-model="newTask.title" autofocus="autofocus" placeholder="title..." required>
+      <input type="text" class="form-control" id="newTaskTitle" ng-model="task.title" autofocus="autofocus" placeholder="title..." required>
     </div>
   </div>
 
   <div class="form-group">
     <label class="sr-only" for="newTaskDue">date</label>
     <div class="col-lg-10">
-      <input type="date" class="form-control" id="newTaskDue" ng-model="newTask.due">
+      <input type="date" class="form-control" id="newTaskDue" ng-model="task.due">
     </div>
   </div>
 
@@ -26,7 +26,7 @@
   <div class="form-group">
     <label class="sr-only" for="newTaskDescription">description</label>
     <div class="col-lg-10">
-      <textarea class="form-control" id="newTaskDescription" ng-model="newTask.description" placeholder="description..."></textarea>
+      <textarea class="form-control" id="newTaskDescription" ng-model="task.description" placeholder="description..."></textarea>
     </div>
   </div>
 
