--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
@@ -15,6 +15,10 @@
     <button type="button" class="btn btn-default" ng-click="taskEdit(task)">
       edit
     </button>
+    
+    <button type="button" class="btn btn-default" ng-click="deleteTask(task)">
+      delete
+    </button>
 
   </div>
 
