--- a/frontend/core/src/main/webapp/static/partials/templates/notes/noteContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/notes/noteContent.html
@@ -11,9 +11,13 @@
   </li>
 
   <div class="item-actions">
-    
+
     <button type="button" class="btn btn-default" ng-click="noteEdit(note)">
       edit
+    </button>
+
+    <button type="button" class="btn btn-default" ng-click="deleteNote(note)">
+      delete
     </button>
 
   </div>
