Renamed item directives.

--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemContent.html
@@ -12,6 +12,10 @@
     task
   </button>
 
+  <button type="button" class="btn btn-default" ng-click="deleteItem(item)">
+    delete
+  </button>
+
   <div ng-show="showEditNewTag" new-tag></div>
 
 </div>
