--- a/frontend/core/src/main/webapp/static/partials/templates/items/itemsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/items/itemsList.html
@@ -6,11 +6,11 @@
 
     <li ng-class="selected" ng-repeat="item in items | filter:newItem" ng-model="activeItem">
 
-      <div ng-click="toggleItemActions()">
+      <div ng-click="toggleItemContent()">
         <span>{{item.title}}</span>
       </div>
 
-      <div item-actions ng-show="showItemActions"></div>
+      <div item-content ng-show="showItemContent"></div>
 
     </li>
     
