--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -21,7 +21,7 @@
   </div>
 
   <div items-list itemsfilter="newItem.title">
-    <h2><a ng-show="items != 0" class="text-muted" href="" ng-click="toggleItemsList()">unsorted</a><span class="pull-right"><small>{{completed}}</small></span></h2>
+    <h2><a class="text-muted" href="" ng-click="toggleItemsList()">unsorted</a><span class="pull-right"><small>{{completed}}</small></span></h2>
   </div>
 
   <div notes-list notesfilter="newItem.title">
