Completed tasks do not get removed.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -91,6 +91,11 @@ ul.entry-list {
   padding-left: 0;
 }
 
+input[type="checkbox"].task-checkbox:checked + span {
+  text-decoration: line-through;
+  color: gray;
+}
+
 .active-list-item {
   border-style: solid none;
   border-width: 1px;
