--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
@@ -12,6 +12,10 @@
 
   <div class="item-actions">
     
+    <button type="button" class="btn btn-default" ng-hide="task.relationships.parentTask" ng-click="taskToProject(task)">
+      add subtask
+    </button>
+    
     <button type="button" class="btn btn-default" ng-click="taskEdit(task)">
       edit
     </button>
