--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -2,22 +2,10 @@
 
   <div class="em-front">
 
-    <div ng-hide="omniFocus">
-      <h1 class="text-primary">extended mind</h1>
-    </div>
+    <h1 class="text-primary">extended mind</h1>
 
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="input-group">
-          <input type="text" class="form-control" ng-model="newItem.title" placeholder="search / add" ng-blur="omniFocus = false" ng-focus="omniFocus = true" required>
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="button" ng-disabled="!newItem.title" ng-click="addNewItem()">
-              +
-            </button> </span>
-        </div>
-      </div>
-    </div>
-
+    <div omni-bar></div>
+  
   </div>
 
   <div items-list itemsfilter="newItem.title">
