Two way data binding fixes.

--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -7,7 +7,7 @@
   <h1 class="text-primary">tasks</h1>
 
   <div tasks-list tasksfilter="{{tasksListFilter}}">
-    <h2>inbox</h2>
+    <h2>unsorted</h2>
   </div>
 
   <div projects-list>
