--- a/frontend/core/src/main/webapp/static/partials/my/notes.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes.html
@@ -7,7 +7,7 @@
   <h1 class="text-primary">notes</h1>
 
   <div notes-list notesfilter="{{notesListFilter}}">
-    <h2>inbox</h2>
+    <h2>unsorted</h2>
   </div>
 
   <h2>projects</h2>
