Two way data binding.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -12,11 +12,11 @@
     <h2><a class="text-muted" href="" ng-click="toggleItemsList()">inbox</a><span class="pull-right"><small>{{completed}}</small></span></h2>
   </div>
 
-  <div notes-list notesfilter="newItem.title">
+  <div filtered-notes-list notesfilter="newItem.title">
     <h2><a class="text-muted" href="my/notes">notes</a></h2>
   </div>
 
-  <div tasks-list tasksfilter="newItem.title">
+  <div filtered-tasks-list tasksfilter="newItem.title">
     <h2><a class="text-muted" href="my/tasks">tasks</a></h2>
   </div>
 
