--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -6,7 +6,7 @@
 
   <h1 class="text-primary">tasks</h1>
 
-  <div tasks-list tasksfilter="{{tasksListFilter}}">
+  <div tasks-list>
     <h2>unsorted</h2>
   </div>
 
