--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/edit.html
@@ -33,7 +33,7 @@
   <div class="form-group">
     <div class="col-lg-10">
       <button type="submit" class="btn btn-default" ng-disabled="!taskEdit.$valid" ng-click="editTask()">
-        add
+        save
       </button>
     </div>
   </div>
