--- a/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/project.html
@@ -6,7 +6,7 @@
 
   <h1 class="text-primary"><a href="/my/tasks">tasks</a></h1>
 
-  <div tasks-list tasksfilter="true">
+  <div tasks-list>
     <h2>{{project.title}}</h2>
   </div>
 
