--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/subTask.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" role="form" name="taskEdit" ng-submit="addSubtask(task)">
+<form class="form-horizontal" role="form" name="subtask" ng-submit="addSubtask(task)">
 
   <div class="form-group">
     <label class="sr-only" for="taskTitle">title</label>
