Subtask and project.

--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
@@ -20,7 +20,7 @@
       edit
     </button>
     
-    <button type="button" class="btn btn-default" ng-click="deleteTask(task)">
+    <button type="button" class="btn btn-default" ng-hide="task.project" ng-click="deleteTask(task)">
       delete
     </button>
 
