--- a/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/contextsList.html
@@ -5,7 +5,7 @@
   <ul>
     <li ng-repeat="context in tags">
 
-      <span ng-click="setActiveItem(context)"><a class="text-muted" href="my/tasks/context/{{context.uuid}}">@{{context.title}}</a></span>
+      <span><a class="text-muted" href="my/tasks/context/{{context.uuid}}">@{{context.title}}</a></span>
 
     </li>
   </ul>
