--- a/frontend/core/src/main/webapp/static/partials/templates/projectsList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/projectsList.html
@@ -5,7 +5,7 @@
   <ul>
     <li ng-repeat="project in projects">
 
-      <span ng-click="setActiveItem(project)"><a class="text-muted" href="my/tasks/project/{{project.uuid}}">{{project.title}}</a></span>
+      <span><a class="text-muted" href="my/tasks/project/{{project.uuid}}">{{project.title}}</a></span>
 
     </li>
   </ul>
