--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
@@ -6,7 +6,7 @@
 
   <li ng-repeat="tag in task.relationships.tags | tagTitle">
 
-    <span ng-click="setActiveItem(tag)"><small><a class="text-muted" href="my/tasks/context/{{tag.uuid}}">@{{tag.title}}</a></small></span>
+    <span><small><a class="text-muted" href="my/tasks/context/{{tag.uuid}}">@{{tag.title}}</a></small></span>
 
   </li>
 
