--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -101,3 +101,10 @@ input[type="checkbox"].task-checkbox:checked + span {
   border-width: 1px;
   border-color: #8E8E93;
 }
+
+.navbar-default,.navbar-collapse {
+  background-color: white;
+  border: none;
+  padding-left: 0;
+  padding-right: 0;
+}
