Collective support. Refactoring.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -102,9 +102,13 @@ input[type="checkbox"].task-checkbox:checked + span {
   border-color: #8E8E93;
 }
 
-.navbar-default,.navbar-collapse {
+.navbar-default, .navbar-collapse {
   background-color: white;
   border: none;
   padding-left: 0;
   padding-right: 0;
+}
+
+.nav > li > span {
+  padding: 10px 15px;
 }
