--- a/frontend/core/src/main/webapp/static/partials/my/tasks/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/edit.html
@@ -4,7 +4,7 @@
     -
   </button>
 
-  <h1 class="text-primary"><a href="/my/tasks">tasks</a></h1>
+  <h1 class="text-primary"><a href="{{prefix}}/tasks">tasks</a></h1>
 
   <div edit-task></div>
 
