--- a/frontend/core/src/main/webapp/static/partials/collective.html
+++ b/frontend/core/src/main/webapp/static/partials/collective.html
@@ -1,5 +1,5 @@
 <div class="em-slide">
-
+  
   <div navbar></div>
 
   <div class="em-front">
@@ -14,12 +14,13 @@
     <h2><a class="text-muted" href="" ng-click="toggleItemsList()">inbox</a><span class="pull-right"><small>{{completed}}</small></span></h2>
   </div>
 
-  <div class="navbar-fixed-bottom pull-left" filtered-notes-list notesfilter="newItem.title">
-    <h2><a class="text-muted" href="{{prefix}}/notes">notes</a></h2>
-  </div>
+    <div class="navbar-fixed-bottom pull-left" filtered-notes-list notesfilter="newItem.title">
+      <h2><a class="text-muted" href="my/notes">notes</a></h2>
+    </div>
 
-  <div class="navbar-fixed-bottom pull-right" filtered-tasks-list tasksfilter="newItem.title">
-    <h2><a class="text-muted" href="{{prefix}}/tasks">tasks</a></h2>
+    <div class="navbar-fixed-bottom pull-right" filtered-tasks-list tasksfilter="newItem.title">
+      <h2><a class="text-muted" href="my/tasks">tasks</a></h2>
+    </div>
   </div>
 
   <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
