--- a/frontend/core/src/main/webapp/static/partials/my/notes/context.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes/context.html
@@ -1,10 +1,10 @@
 <div class="em-slide">
-  
+
   <button type="button" class="btn btn-default pull-right">
     +
   </button>
 
-  <h1 class="text-primary"><a href="my/notes">notes</a></h1>
+  <h1 class="text-primary"><a href="{{prefix}}/notes">notes</a></h1>
 
   <h2>@{{context.title}}</h2>
 
