--- a/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
+++ b/frontend/core/src/main/webapp/static/partials/my/notes/edit.html
@@ -4,7 +4,7 @@
     -
   </button>
 
-  <h1 class="text-primary"><a href="/my/notes">notes</a></h1>
+  <h1 class="text-primary"><a href="{{prefix}}/notes">notes</a></h1>
 
   <div edit-note></div>
 
