--- a/frontend/core/src/main/webapp/static/partials/my/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/context.html
@@ -4,7 +4,7 @@
     +
   </button>
 
-  <h1 class="text-primary"><a href="my/tasks">tasks</a></h1>
+  <h1 class="text-primary"><a href="{{prefix}}/tasks">tasks</a></h1>
 
   <div tasks-list>
     <h2>@{{context.title}}</h2>
