--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/taskContent.html
@@ -6,20 +6,20 @@
 
   <li ng-repeat="tag in task.relationships.tags | tagTitle">
 
-    <span><small><a class="text-muted" href="my/tasks/context/{{tag.uuid}}">@{{tag.title}}</a></small></span>
+    <span><small><a class="text-muted" href="{{prefix}}/tasks/context/{{tag.uuid}}">@{{tag.title}}</a></small></span>
 
   </li>
 
   <div class="item-actions">
-    
+
     <button type="button" class="btn btn-default" ng-hide="task.relationships.parentTask" ng-click="taskToProject(task)">
       add subtask
     </button>
-    
+
     <button type="button" class="btn btn-default" ng-click="taskEdit(task)">
       edit
     </button>
-    
+
     <button type="button" class="btn btn-default" ng-hide="task.project" ng-click="deleteTask(task)">
       delete
     </button>
