--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -10,14 +10,14 @@
   </div>
 
   <div items-list itemsfilter="newItem.title">
-    <h2><a class="text-muted" href="" ng-click="toggleItemsList()">inbox</a><span class="pull-right"><small>{{completed}}</small></span></h2>
+    <h2><a class="em-slide text-muted" href="" ng-click="toggleItemsList()">inbox</a><span class="pull-right"><small>{{completed}}</small></span></h2>
   </div>
 
-  <div class="navbar-fixed-bottom em-slide" filtered-notes-list notesfilter="newItem.title">
+  <div class="em-slide" filtered-notes-list notesfilter="newItem.title">
     <h2><a class="text-muted" href="my/notes">notes</a></h2>
   </div>
 
-  <div class="navbar-fixed-bottom text-right em-slide" filtered-tasks-list tasksfilter="newItem.title">
+  <div class="em-slide" filtered-tasks-list tasksfilter="newItem.title">
     <h2><a class="text-muted" href="my/tasks">tasks</a></h2>
   </div>
 
