--- a/backend/src/main/resources/templates/requestInviteConfirmation.html
+++ b/backend/src/main/resources/templates/requestInviteConfirmation.html
@@ -478,9 +478,9 @@
                     <table align="left" width="100%" border="0" cellpadding="0" cellspacing="0" class="mcnImageContentContainer" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
                         <tbody><tr>
                             <td class="mcnImageContent" valign="top" style="padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 2%;text-align: center;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
-                                    <a href="http://www.ext.md" title="" class="" target="_self" style="word-wrap: break-word !important;">
+                                    <a href="http://ext.md" title="" class="" target="_self" style="word-wrap: break-word !important;">
                                         <img align="center" alt="" src="logoLink" style="max-width: 301px;padding-bottom: 2%;display: inline !important;vertical-align: bottom;border: 0;line-height: 100%;outline: none;text-decoration: none;height: auto !important;" class="mcnImage"/><br/>
-                                        <a href="http://www.ext.md" target="_self" style="color: #606060;font-size: 150%; font-weight: normal; text-decoration: none;word-wrap: break-word !important;">ext.md</a>
+                                        <a href="http://ext.md" target="_self" style="color: #606060;font-size: 150%; font-weight: normal; text-decoration: none;word-wrap: break-word !important;">ext.md</a>
                                     </a>
                             </td>
                         </tr>
