--- a/frontend/core/src/main/webapp/static/less/carousel.less
+++ b/frontend/core/src/main/webapp/static/less/carousel.less
@@ -10,6 +10,8 @@ ul.em-carousel-slides {
   overflow: visible;
   -webkit-transform: translate(0, 0);
   -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
   transform: translate(0, 0);
   padding: 0;
   margin: 0;
@@ -22,12 +24,22 @@ ul.em-carousel-slides li {
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
   backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  -o-perspective: 1000;
+  perspective: 1000;
 }
 
 .em-carousel-animate {
   -webkit-transition: -webkit-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
   -moz-transition: -moz-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
+  -ms-transition: -ms-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
+  -o-transition: -o-transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
   transition: transform cubic-bezier(0.250, 0.460, 0.450, 0.940) .2s;
 }
 
