--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -33,7 +33,7 @@
         <a href="my/account">account</a>
       </li>
       <li>
-        <a href="logout">logout</a>
+        <a href="" ng-click="logout()">logout</a>
       </li>
     </ul>
 
