--- a/frontend/core/src/main/webapp/static/partials/account.html
+++ b/frontend/core/src/main/webapp/static/partials/account.html
@@ -1,8 +1,8 @@
 <div class="em-slide">
 
-  <div navbar></div>
-
-  <h1 class="text-primary">account</h1>
+  <div navbar>
+    <h1 class="text-primary">account</h1>
+  </div>
 
   <span>email: {{email}}</span>
 
