--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -7,6 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
+    <div ng-transclude></div>
   </div>
 
   <div class="navbar-collapse" ng-show="collapse">
