--- a/frontend/core/src/main/webapp/static/less/em-bootstrap.less
+++ b/frontend/core/src/main/webapp/static/less/em-bootstrap.less
@@ -1,51 +1,51 @@
 @basepath: "../lib/bootstrap";
 
 // Core variables and mixins
-@import url(@{basepath}/"variables.less");
-@import "mixins.less";
+@import "@{basepath}/variables.less";
+@import "@{basepath}/mixins.less";
 
 // Reset
-@import "normalize.less";
-@import "print.less";
+@import "@{basepath}/normalize.less";
+@import "@{basepath}/print.less";
 
 // Core CSS
-@import "scaffolding.less";
-@import "type.less";
-@import "code.less";
-@import "grid.less";
-@import "tables.less";
-@import "forms.less";
-@import "buttons.less";
+@import "@{basepath}/scaffolding.less";
+@import "@{basepath}/type.less";
+@import "@{basepath}/code.less";
+@import "@{basepath}/grid.less";
+@import "@{basepath}/tables.less";
+@import "@{basepath}/forms.less";
+@import "@{basepath}/buttons.less";
 
 // Components
-@import "component-animations.less";
-@import "glyphicons.less";
-@import "dropdowns.less";
-@import "button-groups.less";
-@import "input-groups.less";
-@import "navs.less";
-@import "navbar.less";
-@import "breadcrumbs.less";
-@import "pagination.less";
-@import "pager.less";
-@import "labels.less";
-@import "badges.less";
-@import "jumbotron.less";
-@import "thumbnails.less";
-@import "alerts.less";
-@import "progress-bars.less";
-@import "media.less";
-@import "list-group.less";
-@import "panels.less";
-@import "wells.less";
-@import "close.less";
-
+//@import "@{basepath}/component-animations.less";
+//@import "@{basepath}/glyphicons.less";
+//@import "@{basepath}/dropdowns.less";
+//@import "@{basepath}/button-groups.less";
+//@import "@{basepath}/input-groups.less";
+//@import "@{basepath}/navs.less";
+//@import "@{basepath}/navbar.less";
+//@import "@{basepath}/breadcrumbs.less";
+//@import "@{basepath}/pagination.less";
+//@import "@{basepath}/pager.less";
+//@import "@{basepath}/labels.less";
+//@import "@{basepath}/badges.less";
+//@import "@{basepath}/jumbotron.less";
+//@import "@{basepath}/thumbnails.less";
+//@import "@{basepath}/alerts.less";
+//@import "@{basepath}/progress-bars.less";
+//@import "@{basepath}/media.less";
+//@import "@{basepath}/list-group.less";
+//@import "@{basepath}/panels.less";
+//@import "@{basepath}/wells.less";
+//@import "@{basepath}/close.less";
+//
 // Components w/ JavaScript
-@import "modals.less";
-@import "tooltip.less";
-@import "popovers.less";
-@import "carousel.less";
+//@import "@{basepath}/modals.less";
+//@import "@{basepath}/tooltip.less";
+//@import "@{basepath}/popovers.less";
+//@import "@{basepath}/carousel.less";
 
 // Utility classes
-@import "utilities.less";
-@import "responsive-utilities.less";
+//@import "@{basepath}/utilities.less";
+//@import "@{basepath}/responsive-utilities.less";
