--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -115,3 +115,9 @@ input[type="checkbox"].task-checkbox:checked + span {
 .nav > li > span {
   padding: 10px 15px;
 }
+
+.em-padding
+{
+  padding-left: 15px;
+  padding-right: 15px;
+  }
