Updated em-bootstrap path and restored variables.less to functioning version

--- a/frontend/core/src/main/webapp/test/em-bootstrap.less
+++ b/frontend/core/src/main/webapp/test/em-bootstrap.less
@@ -1,4 +1,4 @@
-@basepath: "../lib/bootstrap";
+@basepath: "../static/lib/bootstrap";
 
 // Core variables and mixins
 @import "@{basepath}/variables.less";
