--- a/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/tasks/tasksList.html
@@ -4,7 +4,7 @@
 
   <ul class="list-unstyled">
 
-    <li ng-class="selected" ng-repeat="task in tasks">
+    <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:filterService.activeFilters.today">
 
       <input type="checkbox" name="checkbox" id="checkbox{{$index}}" class="task-checkbox" ng-checked="task.completed" ng-click="taskChecked($index)">
 
