Removed borders from login

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -120,4 +120,20 @@ input[type="checkbox"].task-checkbox:checked + span {
 {
   padding-left: 15px;
   padding-right: 15px;
-  }
+}
+
+.em-simple-input {
+  outline: none;
+  border:none !important;
+  box-shadow:none !important;
+  padding: 0;
+  border-radius: 0 !important;
+  background: none;
+}
+
+.btn {
+  font-size: 36px;
+  font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-weight: 100;
+}
+
