--- a/frontend/core/src/main/webapp/test/em-bootstrap.less
+++ b/frontend/core/src/main/webapp/test/em-bootstrap.less
@@ -21,10 +21,10 @@
 //@import "@{basepath}/component-animations.less";
 //@import "@{basepath}/glyphicons.less";
 //@import "@{basepath}/dropdowns.less";
-//@import "@{basepath}/button-groups.less";
-//@import "@{basepath}/input-groups.less";
+@import "@{basepath}/button-groups.less";
+@import "@{basepath}/input-groups.less";
 //@import "@{basepath}/navs.less";
-//@import "@{basepath}/navbar.less";
+@import "@{basepath}/navbar.less";
 //@import "@{basepath}/breadcrumbs.less";
 //@import "@{basepath}/pagination.less";
 //@import "@{basepath}/pager.less";
@@ -47,5 +47,5 @@
 //@import "@{basepath}/carousel.less";
 
 // Utility classes
-//@import "@{basepath}/utilities.less";
-//@import "@{basepath}/responsive-utilities.less";
+@import "@{basepath}/utilities.less";
+@import "@{basepath}/responsive-utilities.less";
