--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -1,18 +1,18 @@
 <div class="em-core em-slide col-xs-offset-1">
 
-  <h1 class="text-primary">login</h1>
+   <h1 class="text-primary">extended mind</h1>
 
   <form class="form-horizontal" role="form" name="loginForm">
     <div class="form-group">
       <label for="input-email" class="sr-only">email</label>
       <div class="col-lg-10">
-        <input type="email" class="form-control" id="input-email" ng-model="user.username" placeholder="email" autofocus="autofocus" required>
+        <input type="email" class="form-control em-simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." autofocus="autofocus" required>
       </div>
     </div>
     <div class="form-group">
       <label for="input-password" class="sr-only">password</label>
       <div class="col-lg-10">
-        <input type="password" class="form-control" id="input-password" ng-model="user.password" placeholder="password" required>
+        <input type="password" class="form-control em-simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." required>
       </div>
     </div>
     <div class="form-group">
@@ -23,8 +23,8 @@
     </div>
     <div class="form-group">
       <div class="col-lg-10">
-        <button type="submit" class="btn btn-primary" id="login-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
-          log in
+        <button type="submit" class="text-primary btn em-simple-input" id="login-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
+          login
         </button>
       </div>
     </div>
