--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -1,6 +1,6 @@
 <div class="em-core em-slide col-xs-offset-1">
 
-   <h1 class="text-primary">extended mind</h1>
+   <h1 class="text-primary" id="em-logo"><span>extended mind</span></h1>
 
   <form class="form-horizontal" role="form" name="loginForm">
     <div class="form-group">
@@ -18,7 +18,7 @@
     <div class="form-group">
       <div class="col-lg-10">
         <input type="checkbox" name="checkbox" id="remember" ng-model="user.remember">
-        <label for="remember">remember</label>
+        <label id="remember" for="remember">remember</label>
       </div>
     </div>
     <div class="form-group">
