Login: added logo

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -141,3 +141,14 @@ input[type="checkbox"].task-checkbox:checked + span {
 #remember {
   font-size: 20px !important;
 }
+
+#em-logo {
+  background-image: url(../img/extmd_logo_final_tight_250px.png);
+  height: 131px;
+  width: 250px;
+  margin-bottom: 30px;
+  background-repeat: no-repeat;
+    span {
+      display: none;
+    }
+}
