--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -59,6 +59,9 @@ html {
   width: 100%;
   height: 100% !important;
 }
+.datebar > tbody> tr > td {
+  padding-right: 30px;
+}
 
 label {
   font-weight: normal;
@@ -120,4 +123,4 @@ input[type="checkbox"].task-checkbox:checked + span {
 {
   padding-left: 15px;
   padding-right: 15px;
-  }
+}
