--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -59,7 +59,12 @@ html {
   width: 100%;
   height: 100% !important;
 }
-.datebar > tbody> tr > td {
+
+.datebar{
+  width:100%;overflow-x:auto;
+}
+
+.datebar > table > tbody> tr > td {
   padding-right: 30px;
 }
 
