--- a/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
@@ -6,7 +6,7 @@
 
   <h1 class="text-primary">tasks</h1>
 
-  <h2>{{date.day}}</h2>
+  <h2>{{date.displayDate}}</h2>
 
   <ul class="list-unstyled">
     <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:filterService.activeFilters.tasksByDate">
@@ -19,13 +19,15 @@
 
   <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
 
-    <table class="datebar">
-      <tbody>
-        <tr>
-        <td ng-repeat="date in dates"><a class="text-muted" href="" ng-click="dateClicked(date)">{{date.day}}</a></td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="datebar">
+      <table>
+        <tbody>
+          <tr>
+            <td ng-repeat="date in dates"><a class="text-muted" href="" ng-click="dateClicked(date)">{{date.displayDateShort}}</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
   </nav>
 
