--- a/frontend/core/src/main/webapp/static/partials/my/tasks.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks.html
@@ -6,25 +6,28 @@
 
   <h1 class="text-primary">tasks</h1>
 
-  <h2>unsorted</h2>
+  <div>
+    <h2>unsorted</h2>
+    <ul class="list-unstyled">
+      <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:filterService.activeFilters.unsorted">
 
-  <ul class="list-unstyled">
-  <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:filterService.activeFilters.unsorted">
+        <div task></div>
+        
+      </li>
+      <div sub-task></div>
+    </ul>
+  </div>
 
-      <div task></div>
+  <div>
+    <h2>projects</h2>
+    <ul class="list-unstyled">
+      <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:filterService.activeFilters.project">
 
-    </li>
-  </ul>
+        <div project></div>
 
-  <h2>projects</h2>
-
-  <ul class="list-unstyled">
-    <li ng-class="selected" ng-repeat="task in tasks | tasksFilter:filterService.activeFilters.project">
-
-      <div project></div>
-
-    </li>
-  </ul>
+      </li>
+    </ul>
+  </div>
 
   <h2>areas</h2>
 
