--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -1,6 +1,6 @@
 <div class="em-core em-slide col-xs-offset-1">
 
-   <h1 class="text-primary img-responsive" id="em-logo"><span>extended mind</span></h1>
+   <h1 class="text-primary img-responsive col-xs-offset-1" id="em-logo"><span>extended mind</span></h1>
 
   <form class="form-horizontal" role="form" name="loginForm">
     <div class="form-group">
