--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -1,7 +1,8 @@
-<div class="em-core em-slide col-xs-offset-1">
+<div class="em-core em-slide">
 
-   <h1 class="text-primary img-responsive col-xs-offset-1" id="em-logo"><span>extended mind</span></h1>
+   <h1 class="center-block text-primary" id="em-logo"><span>extended mind</span></h1>
 
+<div class="col-xs-offset-1">
   <form class="form-horizontal" role="form" name="loginForm">
     <div class="form-group">
       <label for="input-email" class="sr-only">email</label>
@@ -31,5 +32,6 @@
   </form>
 
   <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
+</div>
 
 </div>
