--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -6,24 +6,24 @@
   <form class="form-horizontal" role="form" name="loginForm">
     <div class="form-group">
       <label for="input-email" class="sr-only">email</label>
-      <div class="col-lg-10">
+      <div class="">
         <input type="email" class="form-control em-simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." autofocus="autofocus" required>
       </div>
     </div>
     <div class="form-group">
       <label for="input-password" class="sr-only">password</label>
-      <div class="col-lg-10">
+      <div class="">
         <input type="password" class="form-control em-simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." required>
       </div>
     </div>
     <div class="form-group">
-      <div class="col-lg-10">
+      <div class="">
         <input type="checkbox" name="checkbox" id="remember" ng-model="user.remember">
         <label id="remember" for="remember">remember</label>
       </div>
     </div>
     <div class="form-group">
-      <div class="col-lg-10">
+      <div class="">
         <button type="submit" class="text-primary btn em-simple-input" id="login-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
           login
         </button>
