--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,8 +1,6 @@
 body {
   font-family: 'Helvetica Neue UltraLight', "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
-  width: 100%;
-  height: 100%;
   font-size: 24px;
 }
 
@@ -16,31 +14,13 @@ h2, h3, h4, h5, h6 {
   font-weight: 300;
 }
 
-html {
-  width: 100%;
-  height: 100%;
-}
-
-.container {
-  width: 100%;
-  max-width: 300px;
-  height: 100%;
-  padding: 0;
-}
-
-.row {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
-.col-xs-12, .col-sm-6, .col-md-8 {
-  padding: 0;
-}
-
 .em-page {
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 80px;
   width: 100%;
   height: 100%;
+  max-width: 400px;
 }
 
 .em-slides {
@@ -49,11 +29,6 @@ html {
 
 .em-slide {
   z-index: 0;
-}
-
-.em-mainlink {
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .boxsizingBorder {
@@ -80,10 +55,6 @@ label {
 
 .em-anchor {
   padding-top: 30px;
-}
-
-.em-note, .em-core {
-  padding-top: 80px;
 }
 
 ul.em-headers {
@@ -152,12 +123,24 @@ input[type="checkbox"].task-checkbox:checked + span {
 }
 
 #em-logo {
-  background-image: url(../img/extmd_logo_final_small.png);
-  height: 70px;
-  width: 160px;
+  background-image: url(../img/extmd_logo_final_234x114.png);
+  height: 114px;
+  width: 234px;
   margin-bottom: 30px;
   background-repeat: no-repeat;
   span {
     display: none;
   }
 }
+
+
+// .row {
+//   width: 100%;
+//   height: 100%;
+//   margin: 0;
+// }
+
+// .col-xs-12, .col-sm-6, .col-md-8 {
+//   padding: 0;
+// }
+
