--- a/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasksSlides.html
@@ -1,15 +1,8 @@
-  <div class="em-slides">
-
-    <ul em-carousel em-carousel-index="slide">
-      <li>
-        <div my></div>
-      </li>
-      <li>
-        <div tasks></div>
-      </li>
-      <li>
-        <div today></div>
-      </li>
-    </ul>
-
-  </div>
+<ul class="em-slides" em-carousel em-carousel-index="slide">
+  <li class="em-slide" my>
+  </li>
+  <li class="em-slide" tasks>
+  </li>
+  <li class="em-slide" today>
+  </li>
+</ul>
