--- a/frontend/core/src/main/webapp/static/partials/pageNotFound.html
+++ b/frontend/core/src/main/webapp/static/partials/pageNotFound.html
@@ -1,14 +1,12 @@
-<div class="span12 em-slide">
-  <div class="masthead">
-    <h3>extended mind</h3>
-    <div url-list></div>
+<div>
+  <h3>extended mind</h3>
+  <div url-list></div>
 
-    <p>
-      &nbsp;
-    </p>
+  <p>
+    &nbsp;
+  </p>
 
-    <p>
-      404 Not Found
-    </p>
-  </div>
+  <p>
+    404 Not Found
+  </p>
 </div>
