--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,11 +1,3 @@
-body {
-  font-family: 'Helvetica Neue UltraLight', "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: 300;
-  width: 100%;
-  height: 100%;
-  font-size: 24px;
-}
-
 h1 {
   font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 100;
@@ -16,39 +8,39 @@ h2, h3, h4, h5, h6 {
   font-weight: 300;
 }
 
+body, .em-page, .em-page > div {
+  height: inherit;
+}
+
 html {
-  width: 100%;
   height: 100%;
+}
+
+body {
+  font-family: 'Helvetica Neue UltraLight', "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
+  font-size: 24px;
 }
 
 .container {
-  width: 100%;
-  max-width: 300px;
-  height: 100%;
-  padding: 0;
-}
-
-.row {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
-.col-xs-12, .col-sm-6, .col-md-8 {
-  padding: 0;
+  padding: 0 15px; // http://getbootstrap.com/css/#grid
 }
 
 .em-page {
-  width: 100%;
-  height: 100%;
+  max-width: 400px;
 }
 
 .em-slides {
-  min-height: 100%;
+  height: inherit;
 }
 
 .em-slide {
-  z-index: 0;
+  height: inherit;
+}
+
+.em-scrollable {
+  height: 100%;
+  overflow: auto;
 }
 
 .em-mainlink {
@@ -56,9 +48,12 @@ html {
   padding-right: 15px;
 }
 
-.boxsizingBorder {
-  width: 100%;
-  height: 100% !important;
+.em-feature-header {
+  height: 3em;
+}
+
+.em-date-footer {
+  height: 3em;
 }
 
 .datebar{
@@ -80,10 +75,6 @@ label {
 
 .em-anchor {
   padding-top: 30px;
-}
-
-.em-note, .em-core {
-  padding-top: 80px;
 }
 
 ul.em-headers {
@@ -151,7 +142,7 @@ input[type="checkbox"].task-checkbox:checked + span {
   font-size: 20px !important;
 }
 
-#em-logo {
+.em-logo {
   background-image: url(../img/extmd_logo_final_small.png);
   height: 70px;
   width: 160px;
