--- a/frontend/core/src/main/webapp/static/partials/login.html
+++ b/frontend/core/src/main/webapp/static/partials/login.html
@@ -1,27 +1,31 @@
-<div class="em-core em-slide">
+<div class="row center-block em-logo">
+  <h1 class="text-primary"><span>extended mind</span></h1>
+</div>
 
-   <h1 class="center-block text-primary" id="em-logo"><span>extended mind</span></h1>
+<div class="row col-xs-offset-1">
+  <form role="form" name="loginForm">
 
-<div class="col-xs-offset-1">
-  <form class="form-horizontal" role="form" name="loginForm">
     <div class="form-group">
       <label for="input-email" class="sr-only">email</label>
       <div class="">
         <input type="email" class="form-control em-simple-input" id="input-email" ng-model="user.username" placeholder="enter email..." autofocus="autofocus" required>
       </div>
     </div>
+    
     <div class="form-group">
       <label for="input-password" class="sr-only">password</label>
       <div class="">
         <input type="password" class="form-control em-simple-input" id="input-password" ng-model="user.password" placeholder="enter password..." required>
       </div>
     </div>
+    
     <div class="form-group">
       <div class="">
         <input type="checkbox" name="checkbox" id="remember" ng-model="user.remember">
         <label id="remember" for="remember">remember</label>
       </div>
     </div>
+    
     <div class="form-group">
       <div class="">
         <button type="submit" class="text-primary btn em-simple-input" id="login-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
@@ -29,9 +33,8 @@
         </button>
       </div>
     </div>
+    
   </form>
 
   <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
-</div>
-
 </div>
