--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,25 +1,30 @@
-<div class="em-slide col-xs-offset-1">
-
-  <div navbar>
-    <h1 class="text-primary">extended mind</h1>
-  </div>
-
-  <div class="em-front">
-    <div omni-bar></div>
-  </div>
-
-  <div class="em-mainlink" items-list itemsfilter="newItem.title">
-    <h2><a class="text-muted" href="" ng-click="toggleItemsList()">inbox</a><span class="pull-right"><small>{{completed}}</small></span></h2>
-  </div>
-
-  <div class="em-slide em-mainlink" filtered-notes-list notesfilter="newItem.title">
-    <h2><a class="text-muted" href="{{prefix}}/notes">notes</a></h2>
-  </div>
-
-  <div class="em-slide em-mainlink" filtered-tasks-list tasksfilter="newItem.title">
-    <h2><a class="text-muted" href="{{prefix}}/tasks">tasks</a></h2>
-  </div>
-
-  <div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
-
+<div class="row center-block em-logo">
+  <h1 class="text-primary"><span>extended mind</span></h1>
 </div>
+
+<div class="row em-omnibar" omni-bar></div>
+
+<div class="row em-inbox" items-list itemsfilter="newItem.title">
+  <h2><a class="text-muted" href="" ng-click="toggleItemsList()">inbox</a><span class="pull-right"><small>{{completed}}</small></span></h2>
+</div>
+
+<div class="row em-filtered-items" filtered-notes-list notesfilter="newItem.title">
+  <h2><a class="text-muted" href="{{prefix}}/notes">notes</a></h2>
+</div>
+
+<div class="row em-filtered-items" filtered-tasks-list tasksfilter="newItem.title">
+  <h2><a class="text-muted" href="{{prefix}}/tasks">tasks</a></h2>
+</div>
+
+<div error-alert-bar alertmessage="errorHandler.errorMessage"></div>
+
+<div class="row em-mainlinks">
+  <div class="pull-left em-feature">
+    <a href="">tasks</a>
+  </div>
+  <div class="pull-right em-feature">
+    <a href="">notes</a>
+  </div>
+</div>
+
+<div class="row" navbar></div>
