--- a/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
+++ b/frontend/core/src/main/webapp/static/partials/my/tasks/today.html
@@ -1,4 +1,4 @@
-<div class="em-slide">
+<div>
   <button type="button" class="btn btn-default pull-right" ng-click="addNew()">
     +
   </button>
@@ -16,18 +16,14 @@
   </ul>
   <div sub-task></div>
 
-  <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-
-    <div class="datebar">
-      <table>
-        <tbody>
-          <tr>
-            <td ng-repeat="date in dates"><a class="text-muted" href="" ng-click="dateClicked(date)">{{date.displayDateShort}}</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-  </nav>
+  <div class="datebar">
+    <table>
+      <tbody>
+        <tr>
+          <td ng-repeat="date in dates"><a class="text-muted" href="" ng-click="dateClicked(date)">{{date.displayDateShort}}</a></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
 </div>
