--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
 
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" ng-click="collapseNavbar()">
