--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -52,12 +52,18 @@ body {
   height: 3em;
 }
 
+.em-menu-footer .navbar-fixed-bottom {
+  right: auto;
+  left: auto;
+}
+
 .em-date-footer {
   height: 3em;
 }
 
-.datebar{
-  width:100%;overflow-x:auto;
+.datebar {
+  width: 100%;
+  overflow-x: auto;
 }
 
 .datebar > table > tbody> tr > td {
