--- a/frontend/core/src/main/webapp/static/partials/templates/navbar.html
+++ b/frontend/core/src/main/webapp/static/partials/templates/navbar.html
@@ -1,17 +1,11 @@
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
 
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" ng-click="collapseNavbar()">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <div ng-transclude></div>
+  <div class="row">
+    <button type="button" ng-click="collapseNavbar()">menu</button>
   </div>
 
-  <div class="navbar-collapse" ng-show="collapse">
-    <ul class="nav navbar-nav">
+  <div ng-show="collapse">
+    <ul>
       <li>
         <a href="my" ng-click="setActiveUuid(user)">home</a>
       </li>
