Omnibar width fixes.

--- a/frontend/core/src/main/webapp/static/partials/my.html
+++ b/frontend/core/src/main/webapp/static/partials/my.html
@@ -1,4 +1,4 @@
-
+<div class="em-scrollable">
   <div class="row center-block em-logo">
     <h1 class="text-primary"><span>extended mind</span></h1>
   </div>
@@ -27,5 +27,6 @@
       <a href="">notes</a>
     </div>
   </div>
+</div>
 
 <div class="row em-menu-footer" navbar></div>
